Fix : check twitch ne marchait pas pour "vidéo inconnue" Fix : Yt : Exclure les upcoming (A venir) de la réponse api